# stateful-faas-sim

./: .gitignore  Cargo.toml  README.md
data/: README.md
experiments/: .gitignore
experiments/001/var-capacity/: README.md  post.py  run.sh
experiments/001/var-capacity/graphs/: 001-var-capacity-energy-nodes.plt  001-var-capacity-overhead.plt
experiments/001/var-defrag/: README.md  post.py  run.sh
experiments/001/var-defrag/graphs/: 001-var-defrag-alpha-beta.plt  001-var-defrag-alpha.plt  001-var-defrag-beta.plt  001-var-defrag-execution-time.plt  001-var-defrag-migration-rate.plt
experiments/001/var-energy/: README.md  post.py  run.sh
experiments/001/var-energy/graphs/: 001-var-energy-energy.plt
experiments/001/var-load/: README.md  post.py  run.sh
experiments/001/var-load/graphs/: 001-var-load-energy-0.05.plt  001-var-load-energy-5.plt  001-var-load-energy.plt
experiments/001/var-state/: README.md  post.py  run.sh
experiments/001/var-state/graphs/: 001-var-state-energy-0.05.plt  001-var-state-energy-5.plt
scripts/: download-artifacts.sh  dump_histograms.py
src/: job.rs  lib.rs  rv_histo.rs  simulation.rs
