[package]
name = "stateful_faas_sim"
version = "0.1.0"
authors = ["Claudio Cicconetti <c.cicconetti@iit.cnr.it>"]
edition = "2021"

[lib]
name = "stateful_faas_sim"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
env_logger = "0.11.2"
histogram-sampler = "0.5.0"
incr_stats = "1.0.1"
log = "0.4.20"
petgraph = "0.6.4"
rand = "0.8.5"
rand_distr = "0.4.3"